--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -56,7 +56,7 @@ body {
 .feature-image {
     width: 50%;
     height: 200px;
-    background: url('path_to_image') no-repeat center center/cover;
+    background: url('/db.png') no-repeat center center/cover;
     border-radius: 15px;
     margin-right: 20px;
 }
@@ -113,7 +113,7 @@ body {
 .insights-image {
     width: 50%;
     height: 200px;
-    background: url('path_to_image') no-repeat center center/cover;
+    background: url('/db.png') no-repeat center center/cover;
     border-radius: 15px;
 }
 
