--- a/src/components/styles/Home.css
+++ b/src/components/styles/Home.css
@@ -56,7 +56,8 @@ body {
 .feature-image {
     width: 50%;
     height: 200px;
-    background: url('/db.png') no-repeat center center/cover;
+    background-size: cover;
+    background-position: center;
     border-radius: 15px;
     margin-right: 20px;
 }
@@ -113,7 +114,8 @@ body {
 .insights-image {
     width: 50%;
     height: 200px;
-    background: url('/db.png') no-repeat center center/cover;
+    background-size: cover;
+    background-position: center;
     border-radius: 15px;
 }
 
